hphp/hack/test/typecheck/references/call_time_reference3.php.exp
File "call_time_reference3.php", line 4, characters 9-11:
Call-time pass-by-reference is not allowed (Parsing[1006])
